--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -89,7 +89,7 @@
         "else:\n",
         "    DATA_PATH = '../data/'"
       ],
-      "execution_count": 213,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -102,7 +102,7 @@
         "import pandas as pd\n",
         "df = pd.read_csv(DATA_PATH+'burritos/burritos.csv')"
       ],
-      "execution_count": 214,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -118,7 +118,7 @@
         "df = df.dropna(subset=['overall'])\n",
         "df['Great'] = df['overall'] >= 4"
       ],
-      "execution_count": 215,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -141,7 +141,7 @@
         "df.loc[carnitas, 'Burrito'] = 'Carnitas'\n",
         "df.loc[~california & ~asada & ~surf & ~carnitas, 'Burrito'] = 'Other'"
       ],
-      "execution_count": 216,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -153,7 +153,7 @@
         "# Drop some high cardinality categoricals\n",
         "df = df.drop(columns=['Notes', 'Location', 'Reviewer', 'Address', 'URL', 'Neighborhood'])"
       ],
-      "execution_count": 217,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -165,7 +165,7 @@
         "# Drop some columns to prevent \"leakage\"\n",
         "df = df.drop(columns=['Rec', 'overall'])"
       ],
-      "execution_count": 218,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -177,14 +177,14 @@
         "# Imports\n",
         "import datetime as dt"
       ],
-      "execution_count": 219,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Bzg7K3SCQp-9",
-        "outputId": "12d04022-bf7c-4a53-b5ef-b0fa03f03065",
+        "outputId": "21e2dcd9-f02f-4f1c-adfd-07c1571ef988",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 241
@@ -193,7 +193,7 @@
       "source": [
         "df.tail()"
       ],
-      "execution_count": 220,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -607,7 +607,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 220
+          "execution_count": 8
         }
       ]
     },
@@ -619,23 +619,22 @@
       "source": [
         "df['Date'] = pd.to_datetime(df['Date'])"
       ],
-      "execution_count": 221,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "JB_MB8j4SCZX",
-        "outputId": "c71ab946-a06c-42a0-9ad8-48736e496ce3",
+        "outputId": "3438c90e-c7c1-4784-9300-d4b6ac23bd7d",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "df['Date'].dtypes"
       ],
-      "execution_count": 222,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -647,7 +646,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 222
+          "execution_count": 10
         }
       ]
     },
@@ -655,7 +654,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "H9-3l7BEgv6E",
-        "outputId": "36c1b807-1866-46d4-80e6-47846ed0ca32",
+        "outputId": "7fb5fce9-ef21-4942-a24b-3a92cdd7887e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 326
@@ -670,7 +669,7 @@
         "df['Great_binary'] = le.fit_transform(df['Great'])\n",
         "display(df.head())"
       ],
-      "execution_count": 223,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1101,7 +1100,7 @@
       "source": [
         "train = df[df['Date'].dt.year <= 2016]"
       ],
-      "execution_count": 224,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1110,9 +1109,9 @@
         "id": "4QrWZdKyUMcG"
       },
       "source": [
-        "validate = df[df['Date'].dt.year == 2017]"
+        "val = df[df['Date'].dt.year == 2017]"
       ],
-      "execution_count": 225,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1124,7 +1123,7 @@
         "test = df[df['Date'].dt.year >= 2018]\n",
         "test = test.drop(columns={'Great_binary', 'Great'})"
       ],
-      "execution_count": 226,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1136,29 +1135,49 @@
         "# Get the features and target\n",
         "target = 'Great_binary'"
       ],
-      "execution_count": 227,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JsTEbTDrY85h"
+        "id": "JsTEbTDrY85h",
+        "outputId": "214ef0eb-9687-424a-b2f2-0e14b605b15d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Get the Base line by using the majority class\n",
-        "majority_class = y_train.mode()"
+        "majority_class = df['Great_binary'].value_counts(normalize=True)\n",
+        "majority_class"
       ],
-      "execution_count": 228,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    0.567696\n",
+              "1    0.432304\n",
+              "Name: Great_binary, dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "ojASoWaDZXsq",
-        "outputId": "f34815ae-1560-4213-c196-d2f653a10863",
+        "outputId": "fc585b6b-7973-4c35-b9d6-cdafecd27192",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 214
         }
       },
       "source": [
@@ -1167,19 +1186,18 @@
         "y_pred = [majority_class] * len(y_val)\n",
         "accuracy_score(y_val, y_pred)"
       ],
-      "execution_count": 229,
+      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.5529411764705883"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 229
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-21-740c64295b41>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Get the baseline score\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mmajority_class\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_val\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'y_val' is not defined"
+          ]
         }
       ]
     },
@@ -1192,7 +1210,7 @@
         "# 1. Import estimator class\n",
         "from sklearn.linear_model import LinearRegression"
       ],
-      "execution_count": 230,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1204,7 +1222,7 @@
         "# 2. Instantiate this class\n",
         "linear_reg = LinearRegression()"
       ],
-      "execution_count": 231,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1242,99 +1260,37 @@
         "X_train_scaled = scaler.fit_transform(X_train_imputed)\n",
         "X_val_scaled = scaler.transform(X_val_imputed)"
       ],
-      "execution_count": 241,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-2Ir7RBzZb4m",
-        "outputId": "09129d06-f860-4397-e66f-1429128da38d",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "id": "-2Ir7RBzZb4m"
       },
       "source": [
         "# 4. Fit the model\n",
         "linear_reg.fit(X_train_scaled, y_train)"
       ],
-      "execution_count": 242,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 242
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "30ZGww1dkJBC",
-        "outputId": "d1fcf906-4286-4e48-addb-28da9090a57e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 391
-        }
+        "id": "30ZGww1dkJBC"
       },
       "source": [
         "# 5. Apply the model\n",
         "linear_reg.predict(X_val_scaled)"
       ],
-      "execution_count": 244,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([-2.77555756e-16, -7.21644966e-16, -8.88178420e-16, -7.77156117e-16,\n",
-              "       -1.05471187e-15,  0.00000000e+00,  1.00000000e+00, -6.66133815e-16,\n",
-              "       -3.33066907e-16,  1.00000000e+00,  1.00000000e+00,  1.66533454e-16,\n",
-              "       -6.10622664e-16, -2.77555756e-16,  1.00000000e+00,  1.00000000e+00,\n",
-              "       -3.88578059e-16,  1.00000000e+00,  1.00000000e+00,  1.00000000e+00,\n",
-              "        1.00000000e+00,  1.11022302e-16, -3.88578059e-16,  1.00000000e+00,\n",
-              "        1.00000000e+00,  1.00000000e+00,  1.00000000e+00,  9.43689571e-16,\n",
-              "        1.00000000e+00,  1.00000000e+00,  1.00000000e+00, -1.91709394e-01,\n",
-              "        1.00000000e+00, -1.11022302e-15, -4.99600361e-16, -2.77555756e-16,\n",
-              "       -1.83186799e-15,  1.00000000e+00,  5.55111512e-17, -6.10622664e-16,\n",
-              "        6.10622664e-16,  1.91709394e-01, -2.22044605e-16,  1.00000000e+00,\n",
-              "        1.00000000e+00, -1.05471187e-15, -3.33066907e-16, -1.66533454e-16,\n",
-              "        1.00000000e+00,  9.43689571e-16, -4.44089210e-16, -6.66133815e-16,\n",
-              "        1.00000000e+00,  1.00000000e+00, -7.21644966e-16,  7.77156117e-16,\n",
-              "       -8.88178420e-16,  4.44089210e-16,  1.00000000e+00, -5.55111512e-16,\n",
-              "        2.22044605e-16,  3.38618023e-15,  3.33066907e-16, -4.44089210e-16,\n",
-              "        1.00000000e+00,  1.00000000e+00,  3.88578059e-16,  1.00000000e+00,\n",
-              "        1.00000000e+00, -1.05471187e-15,  1.00000000e+00,  1.00000000e+00,\n",
-              "       -4.44089210e-16,  1.00000000e+00, -4.99600361e-16, -4.44089210e-16,\n",
-              "       -7.21644966e-16,  1.00000000e+00,  1.00000000e+00,  1.00000000e+00,\n",
-              "        1.00000000e+00,  1.00000000e+00,  1.69365299e-01,  1.00000000e+00,\n",
-              "        1.00000000e+00])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 244
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pTsOxFYOkz4U",
-        "outputId": "1d89afc9-ca84-4282-9622-8102eedd73d5",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "id": "pTsOxFYOkz4U"
       },
       "source": [
         "y_pred = linear_reg.predict(X_val_scaled)\n",
@@ -1342,16 +1298,8 @@
         "# Model accuracy\n",
         "print('Validation Accuracy', linear_reg.score(X_val_scaled, y_val))"
       ],
-      "execution_count": 250,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Validation Accuracy 0.9951365537610158\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
