Finished the test.

--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -184,7 +184,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Bzg7K3SCQp-9",
-        "outputId": "21e2dcd9-f02f-4f1c-adfd-07c1571ef988",
+        "outputId": "bff961e1-223c-411d-f37a-42bc082dab7d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 241
@@ -625,36 +625,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JB_MB8j4SCZX",
-        "outputId": "3438c90e-c7c1-4784-9300-d4b6ac23bd7d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "df['Date'].dtypes"
-      ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "dtype('<M8[ns]')"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 10
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "H9-3l7BEgv6E",
-        "outputId": "7fb5fce9-ef21-4942-a24b-3a92cdd7887e",
+        "outputId": "ba8488d6-a72c-4143-e1ef-d614b9c9edae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 326
@@ -669,7 +641,7 @@
         "df['Great_binary'] = le.fit_transform(df['Great'])\n",
         "display(df.head())"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1100,7 +1072,7 @@
       "source": [
         "train = df[df['Date'].dt.year <= 2016]"
       ],
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -1111,7 +1083,7 @@
       "source": [
         "val = df[df['Date'].dt.year == 2017]"
       ],
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1123,7 +1095,7 @@
         "test = df[df['Date'].dt.year >= 2018]\n",
         "test = test.drop(columns={'Great_binary', 'Great'})"
       ],
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1135,14 +1107,14 @@
         "# Get the features and target\n",
         "target = 'Great_binary'"
       ],
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "JsTEbTDrY85h",
-        "outputId": "214ef0eb-9687-424a-b2f2-0e14b605b15d",
+        "outputId": "6f518d96-d20a-42ed-b554-460474be2a9c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1150,7 +1122,114 @@
       "source": [
         "# Get the Base line by using the majority class\n",
         "majority_class = df['Great_binary'].value_counts(normalize=True)\n",
-        "majority_class"
+        "print('Baseline:',majority_class[0])"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Baseline: 0.5676959619952494\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ma164YFqkGLX"
+      },
+      "source": [
+        "# 1. Import estimator class\n",
+        "from sklearn.linear_model import LogisticRegression"
+      ],
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fWek8h4jkIWO"
+      },
+      "source": [
+        "# 2. Instantiate this class\n",
+        "model = LogisticRegression()"
+      ],
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zrCJVBleEX0C",
+        "outputId": "6f121ba6-3d0c-4924-dd11-972262b12715",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 3. Create the X Matrix and y vector for train data\n",
+        "X_train = train.drop(columns=[target, 'Date','Great'])\n",
+        "y_train = train[target]\n",
+        "\n",
+        "# Create the X Matrix and y vector for validate data\n",
+        "X_val = val.drop(columns=[target, 'Date','Great'])\n",
+        "y_val = val[target]\n",
+        "\n",
+        "# Create the X Matrix and y vector for test data\n",
+        "X_test = test.drop(columns=['Date'])\n",
+        "\n",
+        "# Get any missing value out\n",
+        "import category_encoders as ce\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "from sklearn.linear_model import LogisticRegressionCV\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "# Encoder for training and validation\n",
+        "encoder = ce.OneHotEncoder(use_cat_names=True)\n",
+        "X_train_encoded = encoder.fit_transform(X_train)\n",
+        "X_val_encoded = encoder.transform(X_val)\n",
+        "X_test_encoded = encoder.transform(X_test)\n",
+        "\n",
+        "# Remove the missing values\n",
+        "imputer = SimpleImputer(strategy='mean')\n",
+        "X_train_imputed = imputer.fit_transform(X_train_encoded)\n",
+        "X_val_imputed = imputer.transform(X_val_encoded)\n",
+        "X_test_imputed = imputer.transform(X_test_encoded)\n",
+        "\n",
+        "# Scale the data\n",
+        "scaler = StandardScaler()\n",
+        "X_train_scaled = scaler.fit_transform(X_train_imputed)\n",
+        "X_val_scaled = scaler.transform(X_val_imputed)\n",
+        "X_test_scaled = scaler.transform(X_test_imputed)"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+            "  import pandas.util.testing as tm\n",
+            "/usr/local/lib/python3.6/dist-packages/category_encoders/utils.py:21: FutureWarning: is_categorical is deprecated and will be removed in a future version.  Use is_categorical_dtype instead\n",
+            "  elif pd.api.types.is_categorical(cols):\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-2Ir7RBzZb4m",
+        "outputId": "787a117e-23d0-4807-c77e-57c05e5ffaf4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 4. Fit the model\n",
+        "model.fit(X_train_scaled, y_train)"
       ],
       "execution_count": 20,
       "outputs": [
@@ -1158,9 +1237,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0    0.567696\n",
-              "1    0.432304\n",
-              "Name: Great_binary, dtype: float64"
+              "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+              "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+              "                   multi_class='auto', n_jobs=None, penalty='l2',\n",
+              "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
+              "                   warm_start=False)"
             ]
           },
           "metadata": {
@@ -1173,133 +1254,92 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ojASoWaDZXsq",
-        "outputId": "fc585b6b-7973-4c35-b9d6-cdafecd27192",
+        "id": "30ZGww1dkJBC",
+        "outputId": "016f8eb8-af7d-49af-90f1-c223f71ba296",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 214
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "# Get the baseline score\n",
-        "from sklearn.metrics import accuracy_score\n",
-        "y_pred = [majority_class] * len(y_val)\n",
-        "accuracy_score(y_val, y_pred)"
+        "# 5. Apply the model\n",
+        "y_val_pred = model.predict(X_val_scaled)\n",
+        "\n",
+        "# Import the cross validation\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "\n",
+        "# Calculate the mean of crosvalidation\n",
+        "score_mean_val = cross_val_score(model, X_val_scaled, y_val_pred, cv=10).mean()\n",
+        "\n",
+        "# Model accuracy with validation data\n",
+        "print('Validation Accuracy', score_mean_val)"
       ],
       "execution_count": 21,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-21-740c64295b41>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Get the baseline score\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mmajority_class\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_val\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'y_val' is not defined"
-          ]
+          "output_type": "stream",
+          "text": [
+            "Validation Accuracy 0.851388888888889\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ma164YFqkGLX"
-      },
-      "source": [
-        "# 1. Import estimator class\n",
-        "from sklearn.linear_model import LinearRegression"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "fWek8h4jkIWO"
-      },
-      "source": [
-        "# 2. Instantiate this class\n",
-        "linear_reg = LinearRegression()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zrCJVBleEX0C"
-      },
-      "source": [
-        "# 3. Create the X Matrix and y vector for train data\n",
-        "X_train = train.drop(columns=[target, 'Date'])\n",
-        "y_train = train[target]\n",
-        "\n",
-        "# Create the X Matrix and y vector for validate data\n",
-        "X_val = validate.drop(columns=[target, 'Date'])\n",
-        "y_val = validate[target]\n",
-        "\n",
-        "# Get any missing value out\n",
-        "import category_encoders as ce\n",
-        "from sklearn.impute import SimpleImputer\n",
-        "from sklearn.linear_model import LogisticRegressionCV\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "\n",
-        "# Encoder for training and validation\n",
-        "encoder = ce.OneHotEncoder(use_cat_names=True)\n",
-        "X_train_encoded = encoder.fit_transform(X_train)\n",
-        "X_val_encoded = encoder.transform(X_val)\n",
-        "\n",
-        "# Remove the missing values\n",
-        "imputer = SimpleImputer(strategy='mean')\n",
-        "X_train_imputed = imputer.fit_transform(X_train_encoded)\n",
-        "X_val_imputed = imputer.transform(X_val_encoded)\n",
-        "\n",
-        "# Scale the data\n",
-        "scaler = StandardScaler()\n",
-        "X_train_scaled = scaler.fit_transform(X_train_imputed)\n",
-        "X_val_scaled = scaler.transform(X_val_imputed)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-2Ir7RBzZb4m"
-      },
-      "source": [
-        "# 4. Fit the model\n",
-        "linear_reg.fit(X_train_scaled, y_train)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "30ZGww1dkJBC"
+        "id": "0WeZxyekjvxq",
+        "outputId": "7e968d0e-264d-459d-e631-479f734f9afc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# 5. Apply the model\n",
-        "linear_reg.predict(X_val_scaled)"
+        "y_test_pred = model.predict(X_test_scaled)\n",
+        "\n",
+        "# Calculate the mean of crosvalidation\n",
+        "score_mean_test = cross_val_score(model, X_test_scaled, y_test_pred, cv=10).mean()\n",
+        "\n",
+        "# Model accuracy with validation data\n",
+        "print('Validation Accuracy', score_mean_test)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Validation Accuracy 0.7916666666666667\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pTsOxFYOkz4U"
+        "id": "s55Mgc6CpycS",
+        "outputId": "0d2fc81d-619b-4c67-8fd9-497981982668",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "y_pred = linear_reg.predict(X_val_scaled)\n",
-        "\n",
-        "# Model accuracy\n",
-        "print('Validation Accuracy', linear_reg.score(X_val_scaled, y_val))"
+        "print('Baseline Accuracy:', majority_class[0])\n",
+        "print('Validation Data Accuracy:', score_mean_val)\n",
+        "print('Test Data Accuracy:', score_mean_test)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Baseline Accuracy: 0.5676959619952494\n",
+            "Validation Data Accuracy: 0.851388888888889\n",
+            "Test Data Accuracy: 0.7916666666666667\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
